--- a/application/templates/results.html
+++ b/application/templates/results.html
@@ -118,13 +118,14 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook"></a></li>
-						<li><a href="#" class="icon fa-twitter"></a></li>
-						<li><a href="#" class="icon fa-instagram"></a></li>
+						<li><a href="https://github.com/darrenjhsu/birdid" class="icon fa-github" target="_blank"></a></li>
+						<li><a href="https://www.linkedin.com/in/darren-hsu-76bbbb8b/" class="icon fa-linkedin" target="_blank"></a></li>
+						<li><a href="https://www.flickr.com/photos/darren8221/" class="icon fa-flickr" target="_blank"></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; The Piping Plover</li>
 						<li>Design: <a href="http://templated.co">TEMPLATED</a></li>
+						<li>Contact: contact@plover-birdid.com</li>
 					</ul>
 				</div>
 			</footer>
