Added mobile support

--- a/application/templates/about.html
+++ b/application/templates/about.html
@@ -27,7 +27,7 @@
 
 			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 		<!-- Main -->
-			<section id="main" class="wrapper">
+			<section data-role="none" id="main" class="wrapper">
 				<div class="container">
 
 					<header class="major special">
@@ -50,7 +50,7 @@
 					</p>
 					<h3>Features coming soon</h3>
 					<p>
-					1. Currently the website does not allow mobile users to crop the photo (but whole-photo uploading is OK). It'll be enabled in the future once I figure out how to do so.<br/>
+					<del>1. Currently the website does not allow mobile users to crop the photo (but whole-photo uploading is OK). It'll be enabled in the future once I figure out how to do so.</del> This is done by mapping touch events to mouse events.<br/>
 					2. The result page shows only one photo per candidate. It will be changed to a carousel for a better comparison.<br/>
 					3. Users will be able to report whether the prediction is correct and provide ground truth.<br/>
 					4. Results will be filtered with GBIF EOD (Ebird observation dataset) so birds like Western/Eastern Meadowlark can be separated.<br/>
