--- a/application/templates/index2.html
+++ b/application/templates/index2.html
@@ -9,15 +9,19 @@
 		<title>Plover - A Bird IDing web app</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- <link rel="stylesheet" type="text/css" href="static/css/jquery.mobile-1.4.5.css" /> -->
 		<link rel="stylesheet" href="static/css/main.css" />
 		<link rel="stylesheet" type="text/css" href="static/css/imgareaselect-default.css" />
-		<script type="text/javascript" src="static/scripts/jquery.min.js"></script>
-		<script type="text/javascript" src="static/scripts/jquery.imgareaselect.pack.js"></script>
+		<!-- <script type="text/javascript" src="static/scripts/jquery.min.js"></script> -->
+		<script src="http://code.jquery.com/jquery-2.1.3.js"></script>
+		<!-- <script type="text/javascript" src="static/scripts/jquery.mobile-1.4.5.js"></script> -->
+		<!-- <script type="text/javascript" src="static/scripts/jquery.imgareaselect_touch2.js"></script> -->
+		<script type="text/javascript" src="static/scripts/jquery.imgareaselect.js"></script>
 	</head>
 	<body class="landing">
 
 		<!-- Header -->
-			<header id="header" class="alt">
+			<header id="header" class="alt" data-role="none" >
 				<h1><strong><a href="{{ url_for('index') }}">Plover</a></strong></h1>
 				<nav id="nav">
 					<ul>
@@ -31,7 +35,7 @@
 			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
 		<!-- Banner -->
-			<section id="banner">
+			<section id="banner" data-role="none" >
 				<h2>Plover</h2>
 				<p>A simple bird identification web app for<br /> new and intermediate birders.</p>
 				<ul class="actions">
@@ -40,7 +44,7 @@
 			</section>
 
 			<!-- One -->
-				<section id="GetStarted" class="wrapper style1" style="padding: 3em 0em 0.5em 0em;">
+				<section data-role="none" id="GetStarted" class="wrapper style1" style="padding: 3em 0em 0.5em 0em;">
 					<div class="container 75%">
 						<div class="row 200%">
 							<div class="6u 12u$(medium)">
@@ -57,13 +61,13 @@
 				</section>
 
 			<!-- Two -->
-            	<section id="upload" class="wrapper style1 special" style="padding: 1.5em 0em 0.5em 0em;">
+            	<section data-role="none" id="upload" class="wrapper style1 special" style="padding: 1.5em 0em 0.5em 0em;">
 					<div class="container">
 						<header class="major" style="margin-bottom: 0.5em">
 							<h2>Upload your photo</h2>
 							<p>then drag to crop out the bird.</p>
 						</header>
-							<p>(Mobile users, let me know if the drag feature is OK or not, thanks!)</p>
+							<p>(Mobile users, the cropping feature will come soon! Results may not be accurate.)</p>
                         	<form method=post enctype=multipart/form-data>
                                 <input type="file" id="file" name="file" align="center" />
                                 <br/>
@@ -103,6 +107,7 @@
 			<script src="static/js/skel.min.js"></script>
 			<script src="static/js/util.js"></script>
 			<script src="static/js/main.js"></script>
+			
 			<script type="text/javascript">
 				document.getElementById("file").onchange = function () {
 					var reader = new FileReader();
@@ -110,11 +115,13 @@
 					reader.onload = function (e) {
 						// get loaded data and render thumbnail.
 						document.getElementById("bird_image").src = e.target.result;
+
 					};
 
 					// read the image file as a data URL.
 					reader.readAsDataURL(this.files[0]);
 				};
+				
 				$(function () {
 					$('#bird_image').imgAreaSelect({ 
 						// aspectRatio: '1:1', 
@@ -129,6 +136,13 @@
 						}
 					});
 				});
+
+				// $(function(){
+				// 	$('#bird_image').bind('touchstart', function(event){
+				// 		oldXPos = event.originalEvent.targetTouches[0].pageX;
+				// 		// $('body').bind('touchmove', function(e){e.preventDefault()});
+				// 	});
+				// });
 			</script>
 			<script type="text/javascript">
 				$(function () {
@@ -167,6 +181,7 @@
 				}
 
 			</script>
+
 
 	</body>
 </html>
