--- a/application/templates/about.html
+++ b/application/templates/about.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
+		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
 	</head>
 	<body>
 
@@ -18,6 +19,7 @@
 				<h1><strong><a href="{{ url_for('index') }}">Plover</a></strong></h1>
 				<nav id="nav">
 					<ul>
+						<li><a href="{{ url_for('zh_tw_index') }}">繁體中文</a></li>
 						<li><a href="{{ url_for('index') }}">Home</a></li>
 						<li><a href="{{ url_for('about') }}">About</a></li>
 						<!-- <li><a href="{{ url_for('how_it_works') }}">How it works</a></li> -->
