--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/imgareaselect-default.css') }}" />
+		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
 		<script type="text/javascript" src="{{ url_for('static', filename='scripts/jquery.min.js') }}"></script>
 		<script type="text/javascript" src="{{ url_for('static', filename='scripts/jquery.imgareaselect.pack.js') }}"></script>
 	</head>
