--- a/application/templates/zh-tw/results.html
+++ b/application/templates/zh-tw/results.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
+		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
 		<!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/template.css') }}">		 -->
 		<style type="text/css">
 			#candidates p {
